修改主页面标题显示

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
 layout: home
+titles:
+  en: feather blog
+  zh: 羽毛的博客
+  zh-Hans: 羽毛的博客
+  zh-Hant: 羽毛的博客
 # articles:
 #   excerpt_type: html
 ---
